# smarthep-peak-detection

./: .gitignore  LICENSE  README.md  pyproject.toml
detection-code/: CNN_raytune_opti.py  CNN_training_generated_data.ipynb  fake_data_generation.ipynb  run_training_loop.py
detection-code/src/: CNN_training.py  Unet_1D_model.py  data_augmentation.py
